<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/lunch_app"
            android:orderInCategory="100"
            android:icon="@drawable/ic_open_browser"
            android:title="@string/lunch_app"
            android:tooltipText="@string/lunch_app"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_login"
            android:orderInCategory="100"
            android:title="@string/login"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_setting"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:visible="true"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_license"
            android:orderInCategory="100"
            android:title="@string/license"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_sourcecode"
            android:orderInCategory="100"
            android:title="@string/source_code"
            app:showAsAction="never" />
</menu>
