<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
                android:text="@string/twitter_login"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1">


        <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/my_consumer_use"
                    android:id="@+id/my_consumer_key"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:visibility="invisible"
                    android:layout_height="match_parent"
                    android:id="@+id/consumer_key_layout">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="hint"
                            android:id="@+id/consumer_key_textinput"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="hint"
                            android:id="@+id/consumer_secret_textinput"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                    android:text="@string/open_twitter_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lunch_twitter_button"/>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_number_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_button"
                    />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>